--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_API_URL = "https://api.barangaysanjose.website"
+# REACT_APP_API_URL = "https://api.barangaysanjose.website"
+REACT_APP_API_URL = "http://localhost:8080"
 REACT_APP_SERVICE_ID = "service_5a78jdt"
 REACT_APP_EMAILJS_PUBLIC_KEY = "vQ7jP15U5fBDwt-Nj"
 
